--- a/main/templates/runAdmin/deposit_list.html
+++ b/main/templates/runAdmin/deposit_list.html
@@ -54,8 +54,8 @@
                     <td class="admin_list_body">{{deposit.pay_user.regi_name}}</td>
                     <td class="admin_list_id_body">{{deposit.pay_user.regi_email}}</td>
                     <td class="admin_list_body">{{deposit.pay_num}}</td>
-                    <td class="admin_list_body">{{deposit.payWay_deposit_name}}</td>
-                    <td class="admin_list_body">{{deposit.payWay_deposit_receipt}}</td>
+                    <td class="admin_list_body">{{deposit.payWay_name}}</td>
+                    <td class="admin_list_body">{{deposit.payWay_receipt}}</td>
                     <td class="admin_list_body">{{deposit.delivery_phone}}</td>
                     <td class="admin_list_body">{{deposit.prd_total_price}}</td>
                     <td class="admin_list_body">
