--- a/main/templates/runAdmin/pay_list.html
+++ b/main/templates/runAdmin/pay_list.html
@@ -4,10 +4,13 @@
     <div class="admin_sub_visual">
          <div class="tabs section_wrap">
             <ul>
-                <li><a href="/deposit_list/">무통장 입금 사용자 조회</a></li>
+                <li><a href="/deposit_list/">무통장 입금 조회</a></li>
                 <li class="admin_active"><a href="/pay_list/">구매 데이터 조회</a></li>
+                <li><a href="/user_list/">사용자 조회</a></li>
+                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <li><a href="https://admin.iamport.kr/users/login" target="_blank">아임포트 관리자</a></li>
                 <li><a href="https://partner.danalpay.com/account/login?next=%2F#" target="_blank">다날 (휴대폰인증)</a></li>
+                <li><a href="http://admin8.kcp.co.kr" target="_blank">KCP</a></li>
             </ul>
         </div>
     </div>
@@ -114,6 +117,8 @@
                     <td class="admin_list_body">결제전</td>
                     {% elif deposit.pay_result == 1 %}
                      <td class="admin_list_body">결제실패</td>
+                    {% elif deposit.pay_result == 2 %}
+                     <td class="admin_list_body">환불</td>
                     {% endif %}
                 </tr>
                 {% endfor %}
