--- a/main/templates/runAdmin/user_list.html
+++ b/main/templates/runAdmin/user_list.html
@@ -4,10 +4,10 @@
     <div class="admin_sub_visual">
          <div class="tabs section_wrap">
             <ul>
-                <li class="admin_active"><a href="/deposit_list/">무통장 입금 조회</a></li>
+                <li><a href="/deposit_list/">무통장 입금 조회</a></li>
                 <li><a href="/pay_list/">구매 데이터 조회</a></li>
-                <li><a href="/user_list/">사용자 조회</a></li>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <li class="admin_active"><a href="/user_list/">사용자 조회</a></li>
+                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <li><a href="https://admin.iamport.kr/users/login" target="_blank">아임포트 관리자</a></li>
                 <li><a href="https://partner.danalpay.com/account/login?next=%2F#" target="_blank">다날 (휴대폰인증)</a></li>
                 <li><a href="http://admin8.kcp.co.kr" target="_blank">KCP</a></li>
@@ -24,8 +24,8 @@
                 <div class="input_area_lounge">
                      <input type="date" name="end_date" id="end_date" value="{{end_date}}">
                 </div>
-                <div class="input_area_lounge">
-                     <input type="text" name="search_box" id="search_box" value='{{search}}'  placeholder="아이디 or 주문번호">
+                <div class="input_area_lounge" >
+                     <input type="text" name="search_box" id="search_box" value='{{search}}' placeholder="아이디">
                 </div>
                  <div class="btn_area">
                     <a class="btn" href="javascript:void(0);" onclick="javascript:goSearch(1);">&nbsp;조회하기&nbsp;</a>
@@ -34,55 +34,67 @@
         </div>
     </div>
 
-    <div style="margin-left: 300px; width: 1128px; font-size: 20px !important;">total : {{total_count}}</div>
+    <div style="margin-left: 300px; width: 1130px; font-size: 20px !important; padding-bottom:10px;">total : {{total_count}}
+    </div>
     <div style="overflow: hidden; position: relative; border: 0px; width: 100%;">
-        <table style="margin-left: 300px; width: 1128px;">
+        <table id="payList" style="margin-left: 300px; width: 1130px;">
             <thread>
                 <tr class="row">
                     <th class="admin_list">이름</th>
                     <th class="admin_list_id">아이디</th>
-                    <th class="admin_list">주문번호</th>
-                    <th class="admin_list">입금자명</th>
-                    <th class="admin_list">현금영수증</th>
-                    <th class="admin_list">휴대폰 번호</th>
-                    <th class="admin_list">결제금액</th>
-                    <th class="admin_list">입금확인</th>
+                    <th class="admin_list_id">주문번호</th>
+                    <th class="admin_list_id">키트번호</th>
+                    <th class="admin_list_id">주문키트</th>
+                    <th class="admin_list">결제 day</th>
+                    <th class="admin_list">강의상태</th>
+                    <th class="admin_list">강의시작 day</th>
+                    <th class="admin_list_id">환불여부</th>
                 </tr>
             </thread>
             <tbody>
-                {% for deposit in pay_info %}
+                {% for myclass in myclass_info %}
                 <tr class="row">
-                    <td class="admin_list_body">{{deposit.pay_user.regi_name}}</td>
-                    <td class="admin_list_id_body">{{deposit.pay_user.regi_email}}</td>
-                    <td class="admin_list_body">{{deposit.pay_num}}</td>
-                    <td class="admin_list_body">{{deposit.payWay_name}}</td>
-                    <td class="admin_list_body">{{deposit.payWay_receipt}}</td>
-                    <td class="admin_list_body">{{deposit.delivery_phone}}</td>
-                    <td class="admin_list_body">{{deposit.prd_total_price}}</td>
+                    <td class="admin_list_body">{{user_info.regi_name}}</td>
+                    <td class="admin_list_id_body">{{myclass.user_id}}</td>
+                    <td class="admin_list_id_body">{{myclass.pay_num}}</td>
+                    <td class="admin_list_id_body">{{myclass.prd.prd_code}}</td>
+                    <td class="admin_list_body">{{myclass.prd.title}}</td>
+                    <td class="admin_list_body date"> {{myclass.start_time | date:'Y-m-d' }}</td>
                     <td class="admin_list_body">
-                    {% for myclass in myclass_list %}
-                        {% if myclass.pay_num == deposit.pay_num %}
-                            {% if myclass.dbstat == 'A' %}
-                            확인됨
-                            {% else %}
-                           <a href="javascript:void(0);" onClick="javascript:change('{{deposit.pay_user.regi_email}}', '{{deposit.pay_num}}');" style="cursor:pointer;color:red;"><strong>강의상태 변경하기</strong></a>
-                            {% endif %}
+                        {% if myclass.play == 'D' %}
+                        강의시작 전입니다.
+                        {% else %}
+                        강의 시작되었습니다.
                         {% endif %}
-                    {% endfor %}
+                    </td>
+                    <td class="admin_list_body date"> {{myclass.play_time}}</td>
+                    <td class="admin_list_body date">
+                        {% if myclass.play == 'D' %}
+                            {% if myclass.dbstat == 'D-refund' %}
+                            환불됨
+                            {% else %}
+                            <a href="javascript:void(0);" onClick="javascript:refund('{{myclass.pay_num}}');" style="cursor:pointer;color:red;"><strong>환불하기</strong></a>
+                            {% endif %}
+                        {% else %}
+                        환불불가
+                        {% endif %}
                     </td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
-         <div class="page">
+
+        <div class="page">
             <ul id="paging" class="pagination modal"></ul>
         </div>
     </div>
 </div>
 
+
     <script>
 
-    $(document).ready(function() {
+     $(document).ready(function() {
+       $('#status').val('{{status}}').prop("selected",true);
        $('#page_cnt').val('{{page_cnt}}').prop("selected",true);
 
        var page = '{{last_page}}';
@@ -102,28 +114,27 @@
 
      function goSearch(paging_num)
      {
-
         var start_date = document.getElementById('start_date').value;
         var end_date = document.getElementById('end_date').value;
         var searchBox = $('[name=search_box]').val();
 
-        if(start_date == "" || end_date == "")
+        if(searchBox == "")
         {
-            alert("날짜선택하세요");
+            alert("검색 내용을 입력하세요.");
             return false;
         }
 
         var newForm = $('<form></form>');
 
-        newForm.attr("name", "deposit_search");
+        newForm.attr("name", "user_search");
         newForm.attr("method", "post");
-        newForm.attr("action", "/deposit_search/");
+        newForm.attr("action", "/user_search/");
 
         newForm.append($('<input/>', {type: 'hidden', name: 'csrfmiddlewaretoken', value : '{{ csrf_token }}'}));
         newForm.append($('<input/>', {type: 'hidden', name: 'start_date', value : start_date }));
         newForm.append($('<input/>', {type: 'hidden', name: 'end_date', value : end_date }));
         newForm.append($('<input/>', {type: 'hidden', name: 'searchBox', value : searchBox }));
-        newForm.append($('<input/>', {type: 'hidden', name: 'deposit_all_cnt', value : '{{total_count}}' }));
+        newForm.append($('<input/>', {type: 'hidden', name: 'user_all_cnt', value : '{{total_count}}' }));
         newForm.append($('<input/>', {type: 'hidden', name: 'paging_num', value : paging_num }));
 
         newForm.appendTo('body');
@@ -131,35 +142,33 @@
 
      }
 
-     function change(user_id, pay_num)
-     {
+    function refund(pay_num)
+    {
         var start_date = document.getElementById('start_date').value;
         var end_date = document.getElementById('end_date').value;
         var searchBox = $('[name=search_box]').val();
 
-        if(start_date == "" || end_date == "")
+        if(searchBox == "")
         {
-            alert("날짜선택하세요");
+            alert("검색 내용을 입력하세요.");
             return false;
         }
 
         var newForm = $('<form></form>');
 
-        newForm.attr("name", "deposit_change");
+        newForm.attr("name", "user_refund");
         newForm.attr("method", "post");
-        newForm.attr("action", "/deposit_change/");
+        newForm.attr("action", "/user_refund/");
 
         newForm.append($('<input/>', {type: 'hidden', name: 'csrfmiddlewaretoken', value : '{{ csrf_token }}'}));
         newForm.append($('<input/>', {type: 'hidden', name: 'start_date', value : start_date }));
         newForm.append($('<input/>', {type: 'hidden', name: 'end_date', value : end_date }));
         newForm.append($('<input/>', {type: 'hidden', name: 'searchBox', value : searchBox }));
-        newForm.append($('<input/>', {type: 'hidden', name: 'user_id', value : user_id }));
+        newForm.append($('<input/>', {type: 'hidden', name: 'user_all_cnt', value : '{{total_count}}' }));
         newForm.append($('<input/>', {type: 'hidden', name: 'pay_num', value : pay_num }));
 
         newForm.appendTo('body');
         newForm.submit();
-
-     }
-
+    }
     </script>
 </body></html>
