--- a/main/templates/runAdmin/pay_list.html
+++ b/main/templates/runAdmin/pay_list.html
@@ -1,5 +1,6 @@
 {% load static %}
-{% include "common/head.html" %}
+{% include "common/head_admin.html" %}
+
 <div class="wrap">
     <div class="admin_sub_visual">
          <div class="tabs section_wrap">
@@ -184,7 +185,6 @@
         newForm.append($('<input/>', {type: 'hidden', name: 'end_date', value : end_date }));
         newForm.append($('<input/>', {type: 'hidden', name: 'searchBox', value : searchBox }));
         newForm.append($('<input/>', {type: 'hidden', name: 'status', value : status }));
-        newForm.append($('<input/>', {type: 'hidden', name: 'pay_all_cnt', value : '{{total_count}}' }));
         newForm.append($('<input/>', {type: 'hidden', name: 'paging_num', value : paging_num }));
         newForm.append($('<input/>', {type: 'hidden', name: 'page_cnt', value : page_cnt }));
 
