상세페이지 추가

--- a/main/templates/class/class_detail.html
+++ b/main/templates/class/class_detail.html
@@ -23,6 +23,8 @@
                 <div class="detail_area">
                     <img src="{{prd_detail.img}}" alt="상품상세 이미지">
 
+                    {% include html_file %}
+
                     <div class="precaution">
                         <span class="cautionTitle">구매 전 유의사항</span>
                         <ul>
