상세페이지 추가

--- a/main/templates/product/arduino_trashcan.html
+++ b/main/templates/product/arduino_trashcan.html
@@ -1,23 +1,49 @@
  {% load static %}
+ {% include "product/trashcan.html" %}
     <div class="info_detail">
-        <span class="title">런코딩 코딩 키트 첫번째 프로젝트, "스마트 휴지통"을 소개합니다.&nbsp;&nbsp; </span>
-        <img src="{% static 'resource/img/Trashcan/info_trashcan_1.jpg' %}" style="width:50%; padding-top:10px; padding-bottom:10px" alt="상품상세 이미지">
-        <img src="{% static 'resource/img/Trashcan/info_trashcan_2.jpg' %}" style="width:50%" alt="상품상세 이미지">
-        <span class="img_info">
-            <li>런코딩 키트 학습 완료 후의 최종모습</li>
-            <li>(마지막은 나만의 그림으로 다른 얼굴의 휴지통을 만들어요)</li>
-        </span>
-
+        <span class="sub_title">아두이노 코딩 + AI(인공지능) 코딩&nbsp;&nbsp; </span>
+        <img src="{% static 'resource/img/Trashcan/arduino/info_trashcan_arduino_1.jpg' %}" style="padding-top:10px; padding-bottom:10px" alt="상품상세 이미지">
 
         <ul>
-            <li><span class="first_content">내 주변에서 볼 수 있는 아이템들이 내가 직접 만들어 볼 수 있다면??</span></li>
-            <li><span class="content">단순히 교구에 그치는 창작물은 NO!!</span></li>
-            <li><span class="content">아이디어가 접목된 실생활 아이템들을 직접 만들어 볼 수 있다면 아이들의 흥미도는 업업!!</span></li>
+            <li> <span class="content">아두이노 코딩 개념, 원리 핵심 온라인 강의를 통해 실전 프로그래밍을 쉽게 배울 수 있어요.</span></li>
         </ul>
 
+        <img src="{% static 'resource/img/Trashcan/arduino/info_trashcan_arduino_2.jpg' %}" style="padding-top:100px; " alt="상품상세 이미지">
+        <img src="{% static 'resource/img/Trashcan/arduino/info_trashcan_arduino_3.jpg' %}" style="padding-top:10px; " alt="상품상세 이미지">
+        <img src="{% static 'resource/img/Trashcan/arduino/info_trashcan_arduino_4.jpg' %}" style="padding-top:10px; " alt="상품상세 이미지">
+
         <ul>
-            <li><span class="first_content">인공지능 시대를 살아가고 있는 우리!</span></li>
-            <li><span class="content">우린 인공지능을 다룰 줄 알아야 합니다. 미래의 일자리는 현재 없는 일자리가 더 창출될 예정이니깐요.</span></li>
-            <li><span class="content">결국, 인공지능을 만들고 이용하는 데에는 우리의 창의력이 필요합니다!</span></li>
+            <li> <span class="content">단순히 똑같이 작동하는 모습을 만들어 보는데서 그치는 것이 아니라</span></li>
+            <li> <span class="point_content">중요한 부분에 대해서는 미션을 통해 스스로 생각할 수 있는 힘을 길러줍니다.</span></li>
+            <li> <span class="content">런코딩 온라인 강의 후에는</span></li>
+            <li> <span class="content">원하는 모습을 직접 만들어 보는 MAKER 가 될 수 있을거에요.</span></li>
         </ul>
+
+        <img src="{% static 'resource/img/Trashcan/arduino/info_trashcan_arduino_5.jpg' %}" style="padding-top:100px; " alt="상품상세 이미지">
+        <img src="{% static 'resource/img/Trashcan/arduino/info_trashcan_arduino_6.jpg' %}" style="padding-top:10px; " alt="상품상세 이미지">
+
+        <ul>
+            <li> <span class="content">러닝캠 (카메라센서) - 러닝캠 - 러닝봇 (인공지능 프로그램)   연결 및 결과 분석 모습입니다.</span></li>
+        </ul>
+        <ul>
+            <li> <span class="content">코딩 학습 교구에서는 잘 볼 수 없는 AI(인공지능) 코딩</span></li>
+            <li> <span class="content">아무래도 AI 코딩 경우 프로그래밍 중에서도 고난이도 분야이며 그에 따른 전문가가 많지 않은 편입니다.</span></li>
+        </ul>
+        <ul>
+            <li> <span class="content">그러다보니 아이들 학습으로는 다소 접근하기 어려웠던 AI(인공지능) 코딩, </span></li>
+            <li> <span class="content">런코딩 개발자는 현 AI(인공지능) 개발 파트에서 근무 중인 현직 프로그래머로서</span></li>
+        </ul>
+         <ul>
+            <li> <span class="content">보다 쉽고, 정확하게 인공지능 코딩 학습을 위해</span></li>
+            <li> <span class="point_content">코딩 교구에서는 만나보기 힘든 "러닝봇" 인공지능 프로그램을 자체 개발 + 디자인 키트에 도입하였습니다.</span></li>
+        </ul>
+         <ul>
+            <li> <span class="content">온라인 강의와 러닝봇 AI 프로그램을 통해 아이들이 직접 컴퓨터를 교육시키고, 이를 아두이노 보드와 </span></li>
+            <li> <span class="content">연결해보는 흥미로운 코딩 키트를 만나보세요.</span></li>
+        </ul>
+
+        <img src="{% static 'resource/img/Trashcan/arduino/info_trashcan_arduino_7.jpg' %}" style="padding-top:100px; " alt="상품상세 이미지">
+        <img src="{% static 'resource/img/Trashcan/arduino/info_trashcan_arduino_8.jpg' %}" style="padding-top:10px; " alt="상품상세 이미지">
     </div>
+
+  {% include "product/common.html" %}
