강의 목록 저장

--- a/main/templates/common/header.html
+++ b/main/templates/common/header.html
@@ -29,7 +29,7 @@
         }
     });
 
-     function goMyClass()
+     function goMyClass_header()
     {
          if($("input[type=hidden][name=clientId]").val() == "")
          {
@@ -76,7 +76,7 @@
                 <a href="/comunity/">커뮤니티</a>
             </li>
             <li>
-                <a href="javascript:goMyClass();">나의 강의실</a>
+                <a href="javascript:goMyClass_header();">나의 강의실</a>
             </li>
         </ul>
         <div class="ab_right">
